run.log
gcc -O2 -g -Wall -Wextra -Wpedantic -m64 -march=x86-64 -mno-80387 -mno-mmx -mno-sse -mno-sse2 -mno-red-zone -mcmodel=large -ffreestanding -fno-stack-protector -fno-stack-check -fno-lto -fno-PIE -fno-pic -I. -Inet/include -c syscall.c -o syscall.o
syscall.c: In function ‘tcp_recv_cb’:
syscall.c:48:53: warning: unused parameter ‘pcb’ [-Wunused-parameter]
   48 | static err_t tcp_recv_cb(void *arg, struct tcp_pcb *pcb, struct pbuf *p, err_t err) {
      |                                     ~~~~~~~~~~~~~~~~^~~
syscall.c: In function ‘syscall_handler’:
syscall.c:1094:14: error: ‘SYS_WRITEV’ undeclared (first use in this function); did you mean ‘SYS_WRITE’?
 1094 |         case SYS_WRITEV: {
      |              ^~~~~~~~~~
      |              SYS_WRITE
syscall.c:1094:14: note: each undeclared identifier is reported only once for each function it appears in
syscall.c:1100:43: error: ‘EBADF’ undeclared (first use in this function)
 1100 |             if (!entry) return (uint64_t)-EBADF;
      |                                           ^~~~~
syscall.c:1107:98: error: ‘EFAULT’ undeclared (first use in this function)
 1107 |             if (!is_user_address((uint64_t)uiov, sizeof(struct iovec) * arg3)) return (uint64_t)-EFAULT;
      |                                                                                                  ^~~~~~
syscall.c:1143:14: error: ‘SYS_ARCH_PRCTL’ undeclared (first use in this function)
 1143 |         case SYS_ARCH_PRCTL: {
      |              ^~~~~~~~~~~~~~
syscall.c:1153:31: error: ‘EINVAL’ undeclared (first use in this function)
 1153 |             return (uint64_t)-EINVAL;
      |                               ^~~~~~
syscall.c:1149:23: warning: this statement may fall through [-Wimplicit-fallthrough=]
 1149 |             } else if (arg1 == 0x1001) {
      |                       ^
syscall.c:1156:9: note: here
 1156 |         default:
      |         ^~~~~~~
make: *** [Makefile:51: syscall.o] Error 1
